# valid-nwb-file-to-number-of-datasets

./: README.md  dataset_description.json
.datalad/: config
.datalad/environments/pipeline/: image
.github/workflows/: build_and_upload_docker_image.yml  update.yml
code/: compress.py  update.py  update_pipeline.sh
containers/: Dockerfile
derivatives/: testing.jsonl  valid_nwb_file_to_number_of_datasets.jsonl
envs/: pyproject.toml
